# good_matrices

./: .gitignore  Makefile  README.md  cleanup.sh  compile_maplesat.sh  constants.h  coprimelist.h  decomps.h  driver.sh  generate_compstring_instances.py  generate_matching_instances_comp  generate_matching_instances_comp.cpp  generate_pairedmatchings  generate_pairedmatchings.cpp  join_pairedmatchings  join_pairedmatchings.cpp  main.py  metrics.py  print_timings_table.py  pyproject.toml  remove_equivalent_exhaust  remove_equivalent_exhaust.cpp  remove_equivalent_matchedpairs  remove_equivalent_matchedpairs.cpp  solve_compstring_instances.py  sortpairs.sh  utils.h
good_matrices/: driver.sh
